Bug 1909034: Peer assessment alignment style fixes
behatnotneeded

(cherry picked from commit 61ac427ed4fac7b597e8e1b8935d5f9bfedf9a36)

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -427,6 +427,11 @@ div.toolbarhtml {
         background-color: $accent-bg !important;
     }
 }
+.peerinstructions {
+    div.fieldset-body {
+        margin-bottom: $spacing-base !important;
+    }
+}
 .viewinstruction-export {
     border: $card-border-width solid $card-border-color;
     padding: $card-spacer-y $card-spacer-x;
