--- a/htdocs/theme/raw/sass/components/_btn-group.scss
+++ b/htdocs/theme/raw/sass/components/_btn-group.scss
@@ -154,3 +154,10 @@ fieldset.btn-group {
         margin-top: -0.8125rem; // -13px;
     }
 }
+
+// peer assessment block
+.bt-peerassessment {
+    .comment-item .assessment-item-buttons {
+        margin-top: -0.8125rem; // -13px;
+    }
+}
